# Fast-Python-Grid

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build-all.bat  build-linux.bat  build-local.bat  build-windows.bat  build.bat  build.sh  demo.bat  pyproject.toml  requirements.txt  setup.bat
.github/workflows/: publish.yml  tests.yml
benchmarks/: bench_render.py  bench_zoom.py  bench_zoom_live.py  benchmark_bigselect.py  benchmark_dataops.py  benchmark_geometry.py  benchmark_interactive.py
demos/: _data.py  benchmark_bigselect.py  benchmark_geometry.py  benchmark_interactive.py  demo.bat  demo_gpu_qt.py  demo_gpu_tk.py  setup.bat
fastgrid/: README.md  __init__.py
fastgrid/core/: filter.py  find.py  geometry.py  gpu.py  gridcontroller.py  model.py  paint.py  render.py  selection.py  theme.py
fastgrid/core/_gpu/: build.bat
fastgrid/core/_gridstore/: build.bat  gridcore.cpp
fastgrid/render/: __init__.py  gpu_qt.py  gpu_tk.py
fastgrid/renderer/: __init__.py  qt.py  tk.py
fastpygrid/: __init__.py  frame.py
fastpygrid/core/: __init__.py  coremodel.py  filter.py  find.py  geometry.py  gpu.py  gridcontroller.py  model.py  paint.py  render.py  selection.py  theme.py
fastpygrid/csrc/: glsurface.cpp  gridcore.cpp  surface.cpp
fastpygrid/render/: __init__.py  qt.py  tk.py
scripts/: _data.py  bench.py  bench_geometry.py  check_select.py  demo_qt.py  demo_tk.py  fuzz_coremodel.py
scripts/benchmarks/: bench_geometry.py
scripts/tests/: check_select.py  fuzz_coremodel.py
src/: __init__.py
src/core/: __init__.py  coremodel.py  find.py  gpu.py
src/core/_gpu/: surface.cpp
src/render/: __init__.py  gpu_qt.py  gpu_tk.py  qt.py  tk.py
tests/: test_filter.py  test_filter_phantom_row.py  test_filter_scroll_page.py  test_frame.py  test_geometry.py  test_gridcontroller.py  test_model.py  test_render.py  test_selection.py  test_zoom_coalesce.py
