[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "fastpygrid"
version = "0.1.5"
description = "Fast, GPU-painted spreadsheet grid for tens of thousands of rows (OpenGL; Windows and Linux)."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Flynn Crochon" }]
keywords = ["grid", "spreadsheet", "table", "gpu", "opengl", "tkinter", "qt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = []

[project.optional-dependencies]
qt = ["PySide6"]

[project.urls]
Homepage = "https://github.com/flynncrochon/Fast-Python-Grid"
Repository = "https://github.com/flynncrochon/Fast-Python-Grid"

[tool.scikit-build]
# The whole package (both .py and the two DLLs) is produced by CMake install(),
# so disable scikit-build-core's own pure-python discovery.
wheel.packages = []
# The native bits load via ctypes (not a CPython extension), so one wheel works
# on any Python 3.x; tag it py3, not cp38/cp39/...
wheel.py-api = "py3"
# The wheel is platform-tagged (win_amd64 / manylinux): each carries only its own
# platform's binary and pip picks the right per-OS wheel. Built by build-windows.bat
# (Windows), build.sh / build-linux.bat (Linux), or CI (.github/workflows/publish.yml).
